--- a/OHPC_working.yml
+++ b/OHPC_working.yml
@@ -14,9 +14,11 @@
        - "xinetd"
        - "vim" 
        - "net-tools"
-       - "fail2ban" 
        - "exportfs" 
        - "firewalld"
  
+   - name: install fail2ban # separate b/c it's in epel
+     yum: name=fail2ban state=latest 
+
    - name: get OpenHPC Repo #hardcoded version # :(
      get_url: url=http://build.openhpc.community/OpenHPC:/1.0/CentOS_7.1/OpenHPC:1.0.repo dest=/etc/yum.repos.d/
