--- a/OHPC_working.yml
+++ b/OHPC_working.yml
@@ -166,17 +166,19 @@
 #   - name: add headnode to compute ntp.conf
 #     lineinfile: line="server 10.1.1.1" dest={{ chroot_loc }}/etc/ntp.conf state=present
 
-   - name: fix the warewulf wwsh script... ARGH (line 29)
-     lineinfile: 
-       dest: /bin/wwsh
-       insertafter: '^\$ENV\{\"PATH\"\}'
-       line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
+#   - name: fix the warewulf wwsh script... ARGH (line 29)
+#     lineinfile: 
+#       dest: /bin/wwsh
+#       insertafter: '^\$ENV\{\"PATH\"\}'
+#       line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
+#       state: present
 
-   - name: fix the warewulf wwnodescan script... ARGH (line 96)
-     lineinfile: 
-       dest: /bin/wwnodescan
-       insertafter: '^\$ENV\{\"PATH\"\}'
-       line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
+#   - name: fix the warewulf wwnodescan script... ARGH (line 96)
+#     lineinfile: 
+#       dest: /bin/wwnodescan
+#       insertafter: '^\$ENV\{\"PATH\"\}'
+#       line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
+#       state: present
 
 #   - name: wwimport file into image (passwd)
 #     command: wwsh file import /etc/passwd
@@ -194,10 +196,10 @@
 #     command: wwsh file import /etc/munge/munge.key
 
 #   - name: build bootstrap image
-#     command: wwbootstrap `uname -r`
+#     shell: wwbootstrap `uname -r`
 
 #   - name: build the vnfs 
-#     command: wwvnfs -y --chroot "{{ chroot }}"
+#     command: wwvnfs -y --chroot "{{ chroot_loc }}/"
 
 #   vars_prompt:
 #    - name: "public_interface"
