renamed enable slurmd task

--- a/roles/computes_config/tasks/main.yml
+++ b/roles/computes_config/tasks/main.yml
@@ -18,7 +18,7 @@
    - name: start slurmd on compute nodes
      shell: pdsh -w "{{ node_glob }}" systemctl start slurmd
 
-   - name: start slurmd on compute nodes
+   - name: enable slurmd on compute nodes
      shell: pdsh -w "{{ node_glob }}" systemctl enable slurmd
 
    - name: update slurm status on nodes
